--- a/escolar/core/static/index.html
+++ b/escolar/core/static/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,31 +7,19 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>Bolt</a>
-      <!-- <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a> -->
-      <!-- <h2 class="center orange-text"><i class="material-icons">flash_on</i></h2> -->
+      <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
-        <li><a href="#section-services">Serviços</a></li>
-        <li><a href="#section-team">Equipe</a></li>
-        <li><a href="#section-works">Parceiros</a></li>
-        <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Navbar Link</a></li>
-        <li><a href="#section-services">Serviços</a></li>
-        <li><a href="#section-team">Equipe</a></li>
-        <li><a href="#section-works">Parceiros</a></li>
-        <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -64,7 +51,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center orange-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Speeds up development</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
@@ -170,8 +157,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="static/js/materialize.js"></script>
-  <script src="static/js/init.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 
   </body>
 </html>
